Updated landing page.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
 
     <title>Translit Keyboard</title>
-    <meta name="description" content="The HTML5 Herald">
-    <meta name="author" content="SitePoint">
+    <meta name="description" content="Translit Keyboard">
+    <meta name="author" content="Archagon">
 
     <link rel="stylesheet" href="css/styles.css?v=1.0">
 
@@ -28,7 +28,9 @@
     <center>
     <p style="width: 800px">With Translit Keyboard, you don't have to spend months learning a new keyboard layout for a langauge with a different alphabet. Simply type out the characters phonetically and watch them appear on your screen!</p>
 
-    <p>Currently supported languages: <b>Russian, Ukrainian, Greek</b></p>
+    <p>Currently supported languages: <b>Russian, Ukrainian, Bulgarian, Belarusian, Georgian, Macedonian, Armenian, Greek</b></p>
+    <p>and...</p>
+    <p><b>Old Slavonic</b>! (for demonstration purposes)
     </center>
 </body>
 
