--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <p>Currently supported languages: <b>Russian, Ukrainian, Bulgarian, Belarusian, Georgian, Macedonian, Armenian, Greek</b></p>
     <p>and...</p>
-    <p><b>Old Slavonic</b>! (for demonstration purposes)
+    <p><b>Old Slavonic</b>! (for demonstration purposes)</p>
     </center>
 </body>
 
