--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <p>
     <center>
-        <img style="width: 200px" src="/translit-homepage/Icon.png"></img>
-        <img style="width: 200px" src="/translit-homepage/Icon-Lite.png"></img>
+        <img style="width: 200px" src="/Icon.png"></img>
+        <img style="width: 200px" src="/Icon-Lite.png"></img>
     </center>
     </p>
 
