Added privacy policy.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     <p>and...</p>
     <p><b>Old Slavonic</b>! (for demonstration purposes)</p>
     </center>
+
+    <center>
+        <p><a href="/privacy.html">Privacy Policy</a></p>
+    </center>
 </body>
 
 </html>
