--- a/privacy.html
+++ b/privacy.html
@@ -19,7 +19,7 @@
     <p><center><h1>Privacy Policy</h1></center></p>
 
     <center>
-    <p>None of your keystrokes or any other data is accessible to me, the developer. In fact, I specifically prevented the app from requesting "full access" in order for it to remain in full sandbox mode. This means that nothing you do with the keyboard can ever be sent over the network or even be seen by the container app.</p>
+    <p>None of your keystrokes or any other data is accessible to me, the developer. In fact, I specifically prevented the keyboard from requesting "full access" in order for it to remain in full sandbox mode. This means that nothing you do with the keyboard can ever be sent over the network or even be seen by the container app.</p>
     </center>
 </body>
 
