--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <center>
     <p style="width: 800px">With Translit Keyboard, you don't have to spend months learning a new keyboard layout for a langauge with a different alphabet. Simply type out the characters phonetically and watch them appear on your screen!</p>
 
-    <p>Currently supported languages: <b>Russian, Ukrainian, Bulgarian, Belarusian, Georgian, Macedonian, Armenian, Greek</b></p>
+    <p>Currently supported languages: <b>Russian, Ukrainian, Belarusian, Georgian, Macedonian, Armenian, Greek</b></p>
     <p>and...</p>
-    <p><b>Old Slavonic</b>! (for demonstration purposes)</p>
+    <p><b>Old Slavonic</b>!
     </center>
 
     <center>
