some styling updates.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <section id="showcase">
             <section id="demo">
                 <img class="device-background" src="apple-iphone-5s.svg" />
+                <img class="placeholder" src="placeholder.png" />
                 <video id="screen" controls preload onplaying="this.controls=false" loop autoplay>
                     <source src="demo.mp4" type="video/mp4">
                 </video>
@@ -98,7 +99,7 @@
 
             <p><strong>If you have any questions or bugs to report, please e-mail me at <a href="mailto:translit-keyboard@archagon.net">translit-keyboard@archagon.net</a>.</strong></p>
 
-            <p>This keyboard is built on a simplified recreation of the official iOS system keyboard that I have open-sourced. The keyboard is written entirely in Swift and can be found <a href="https://github.com/archagon/tasty-imitation-keyboard">here</a>.</p>
+            <p>This keyboard is built on top of a simplified recreation of the official iOS system keyboard that I have open-sourced. The keyboard is written entirely in Swift and can be found <a href="https://github.com/archagon/tasty-imitation-keyboard">here</a>.</p>
 
             <p>You can find the source code for an unpolished OSX version of the transliterator <a href="https://github.com/archagon/cyrillic-transliterator">here</a>. It installs as an "input method" — a special keyboard layout you can add in your language settings — and in my experience works without error. At the moment, it only supports transliteration to Russian. Since I'm not currently charging for it, I can't provide you with much support.</p>
 
