--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id="showcase">
             <section id="demo">
                 <img class="device-background" src="apple-iphone-5s.svg" />
-                <img class="placeholder" src="placeholder.png" />
+                <img class="placeholder" src="placeholder.PNG" />
                 <video id="screen" controls preload onplaying="this.controls=false" loop autoplay>
                     <source src="demo.mp4" type="video/mp4">
                 </video>
