--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <a href="http://itunes.apple.com/app/id931305272">
                         <img class="icon" style="width:12em" src="Icon-Lite.png" />
                         <h1>Translit Keyboard Lite</h1>
-                        <p class="description">Old Salvonic</p>
+                        <p class="description">Old Slavonic</p>
                         <img class="badge" style="width:8em" src="download_badge.svg" />
                     </a>
                 </div>
